# linsearch

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs  search.rs  ui.rs
src/api/: mod.rs  queries.rs  types.rs
