[package]
name = "linsearch"
version = "0.1.0"
edition = "2021"
authors = ["Michael Sutherland"]
description = "A fast CLI tool to search Linear issues for specific terms"
license = "MIT"
repository = "https://github.com/Suthyy/linsearch"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true